--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.auth0:java-jwt:4.5.0'
-    //implementation 'com.oracle.database.jdbc:ojdbc11'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'com.oracle.database.jdbc:ojdbc11'
+    //runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
