--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=globalsolution
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
-#spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-#spring.datasource.username=rm554669
-#spring.datasource.password=230605
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=rm554669
+spring.datasource.password=230605
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
