arrumando pro deploy.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=globalsolution
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=rm554669
-spring.datasource.password=230605
+# Configurações de conexão com o Oracle
+spring.datasource.url=${db.url}
+spring.datasource.username=${db.user}
+spring.datasource.password=${db.passwd}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
