--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,17 @@ spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 spring.datasource.username=rm554669
 spring.datasource.password=230605
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Configurações de conexão com o Oracle
+#spring.datasource.url=${db.url}
+#spring.datasource.username=${db.user}
+#spring.datasource.password=${db.passwd}
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
+#spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# Para exibir o sql gerado no log (debug)
+#spring.jpa.show-sql=true
+# Para criar as tabelas a partir das entidades (no startup)
+#spring.jpa.generate-ddl=true
+# Para apagar os dados anteriores e criar novas tabelas (no startup)
+#spring.jpa.hibernate.ddl-auto=create-drop
